Added custom keybind system, no longer need fapi